// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawPowersAndAttacks() should return 1 power or attack card 1`] = `
Array [
  Object {
    "id": "card4",
    "type": "Power",
  },
]
`;

exports[`drawPowersAndAttacks() should return 3 power or attack cards 1`] = `
Array [
  Object {
    "id": "card4",
    "type": "Power",
  },
  Object {
    "id": "card2",
    "type": "Power",
  },
  Object {
    "id": "card3",
    "type": "Attack",
  },
]
`;
